approved assessment sent to downstreams and rejected/moreinfo are sent to customer
